update feature category

--- a/WarehouseManagement.Api/WarehouseManagement.Api.csproj
+++ b/WarehouseManagement.Api/WarehouseManagement.Api.csproj
@@ -17,12 +17,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-	<ProjectReference Include="..\WarehouseManagement.Infrastructure\WarehouseManagement.Infrastructure.csproj" />
-
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\WarehouseManagement.Application\WarehouseManagement.Application.csproj" />
+		<ProjectReference Include="..\WarehouseManagement.Infrastructure\WarehouseManagement.Infrastructure.csproj" />
+	</ItemGroup>
 </Project>
