--- a/WarehouseManagement.Infrastructure/WarehouseManagement.Infrastructure.csproj
+++ b/WarehouseManagement.Infrastructure/WarehouseManagement.Infrastructure.csproj
@@ -19,4 +19,9 @@
 		<ProjectReference Include="..\WarehouseManagement.Application\WarehouseManagement.Application.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Configurations\" />
+	  <Folder Include="Repositories\" />
+	</ItemGroup>
+
 </Project>
