Init Identity Store

--- a/WarehouseManagement.Api/WarehouseManagement.Api.csproj
+++ b/WarehouseManagement.Api/WarehouseManagement.Api.csproj
@@ -22,4 +22,7 @@
 		<ProjectReference Include="..\WarehouseManagement.Application\WarehouseManagement.Application.csproj" />
 		<ProjectReference Include="..\WarehouseManagement.Infrastructure\WarehouseManagement.Infrastructure.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
 </Project>
