--- a/WarehouseManagement.Application/WarehouseManagement.Application.csproj
+++ b/WarehouseManagement.Application/WarehouseManagement.Application.csproj
@@ -10,4 +10,9 @@
 		<ProjectReference Include="..\WarehouseManagement.Domain\WarehouseManagement.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="DTOs\" />
+	  <Folder Include="Interfaces\" />
+	</ItemGroup>
+
 </Project>
