--- a/WarehouseManagement.Domain/WarehouseManagement.Domain.csproj
+++ b/WarehouseManagement.Domain/WarehouseManagement.Domain.csproj
@@ -6,4 +6,12 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Folder Include="Entities\Catalog\" />
+	  <Folder Include="Entities\Inventory\" />
+	  <Folder Include="Entities\Partners\" />
+	  <Folder Include="Entities\Purchase\" />
+	  <Folder Include="Entities\Sales\" />
+	</ItemGroup>
+
 </Project>
