--- a/WarehouseManagement.Infrastructure/WarehouseManagement.Infrastructure.csproj
+++ b/WarehouseManagement.Infrastructure/WarehouseManagement.Infrastructure.csproj
@@ -21,7 +21,9 @@
 
 	<ItemGroup>
 	  <Folder Include="Configurations\" />
+	  <Folder Include="Data\" />
 	  <Folder Include="Repositories\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
