Seed Data, Auth

--- a/WarehouseManagement.Api/appsettings.json
+++ b/WarehouseManagement.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Secret": "",
+    "Issuer": "WarehouseManagement",
+    "Audience": "WarehouseManagement"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
